force-app/main/default/objects/Category__c/Category__c.object-meta.xml
<CustomObject>
    <description>For PERSO app, list all categories for Perso menus.</description>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>