force-app/main/default/objects/Category__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to precised if the category is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>