force-app/main/default/objects/Category__c/fields/appcataloguevalue__c.field-meta.xml
<CustomField>
    <fullName>appcataloguevalue__c</fullName>
    <label>appcataloguevalue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>