force-app/main/default/objects/Category__c/fields/Category_Hardsided__c.field-meta.xml
<CustomField>
    <fullName>Category_Hardsided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Category Hardsided</label>
    <type>Checkbox</type>
</CustomField>