force-app/main/default/objects/Category__c/fields/Exotic_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Exotic_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exotic Workflow</label>
    <type>Checkbox</type>
</CustomField>