force-app/main/default/objects/Category__c/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <description>File name (with extension). For example: &apos;tambour.png&apos;</description>
    <inlineHelpText>File name (with extension). For example: &apos;tambour.png&apos;</inlineHelpText>
    <label>File name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>