force-app/main/default/objects/Category__c/fields/FluidViewImage__c.field-meta.xml
<CustomField>
    <fullName>FluidViewImage__c</fullName>
    <description>[Now Yours app] Display Fluid view image if not empty (used in ProductCatalogue__c.FluidViewImage__c formula)</description>
    <label>FluidViewImage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>