force-app/main/default/objects/Category__c/fields/GenderMen__c.field-meta.xml
<CustomField>
    <fullName>GenderMen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gender Men</label>
    <type>Checkbox</type>
</CustomField>