force-app/main/default/objects/Category__c/fields/GenderWomen__c.field-meta.xml
<CustomField>
    <fullName>GenderWomen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gender Women</label>
    <type>Checkbox</type>
</CustomField>