force-app/main/default/objects/Category__c/fields/Hidden_Fluid_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Fluid_Attribute__c</fullName>
    <description>Les attributs fluid à cacher doivent être séparés d&apos;une virgule (au cas où: les espaces sont supprimés donc il peut y avoir un espace après la virgule ou pas)</description>
    <label>Hidden Fluid Attribute</label>
    <type>TextArea</type>
</CustomField>