force-app/main/default/objects/Category__c/fields/Hide_category_in_NY__c.field-meta.xml
<CustomField>
    <fullName>Hide_category_in_NY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked -&gt; will hide the category in Now Yours app for all profiles (while NY_testable field will hide for specific profiles)</description>
    <label>Hide category in NY</label>
    <type>Checkbox</type>
</CustomField>