force-app/main/default/objects/Category__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Image (to display the picture in Salesforce)</description>
    <formula>IMAGE(ImageUrl__c, &apos;&apos;, 50, 50)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>