force-app/main/default/objects/Category__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>Picture url for the category for Now Yours</description>
    <label>Image Url</label>
    <type>Url</type>
</CustomField>