force-app/main/default/objects/Category__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the flag is active, display a &quot;new&quot; band in the top-right corner of the picture in NY</description>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>