force-app/main/default/objects/Category__c/fields/MIY_Testable__c.field-meta.xml
<CustomField>
    <fullName>MIY_Testable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if this category should be visible to Tester Users. This way, caterogies can be hidden from any users except testers</description>
    <label>NY Testable</label>
    <type>Checkbox</type>
</CustomField>