force-app/main/default/objects/Category__c/fields/OrderIndex__c.field-meta.xml
<CustomField>
    <fullName>OrderIndex__c</fullName>
    <description>[Now Yours - Perso] Categories are displayed in a particular order (manual changed)</description>
    <label>Order Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>