force-app/main/default/objects/Category__c/fields/Personalizable__c.field-meta.xml
<CustomField>
    <fullName>Personalizable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some categories are used to be displayed in Perso App (SKU with Fluid id) and others categories are not personalizable but must be displayed in Perso app (Trunks products which have no Fluid id)</description>
    <label>Personalizable</label>
    <type>Checkbox</type>
</CustomField>