force-app/main/default/objects/Category__c/fields/Store_Display__c.field-meta.xml
<CustomField>
    <fullName>Store_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the category contains at least one product that forbids store display, the store display checkbox should be inactive</description>
    <label>Store Display</label>
    <type>Checkbox</type>
</CustomField>