force-app/main/default/objects/Category__c/fields/Wardrobing__c.field-meta.xml
<CustomField>
    <fullName>Wardrobing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wardrobing</label>
    <type>Checkbox</type>
</CustomField>