force-app/main/default/objects/Category__c/fields/Website_Views__c.field-meta.xml
<CustomField>
    <fullName>Website_Views__c</fullName>
    <description>List of views per category that will be displayed on Now Yours website, in the favorites / cart / order validation / confirmation carrousel</description>
    <label>Website Views</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Front</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Packshot</fullName>
            </value>
            <value>
                <fullName>FrontAndBack</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Accessorie</fullName>
            </value>
            <value>
                <fullName>AccessorieInside</fullName>
            </value>
            <value>
                <fullName>Side</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>