force-app/main/default/objects/Category__c/listViews/Make_It_Yours_view.listView-meta.xml
<ListView>
    <fullName>Make_It_Yours_view</fullName>
    <columns>NAME</columns>
    <columns>GenderMen__c</columns>
    <columns>GenderWomen__c</columns>
    <columns>Parent__c</columns>
    <columns>Active__c</columns>
    <columns>MIY_Testable__c</columns>
    <columns>OrderIndex__c</columns>
    <columns>appcataloguevalue__c</columns>
    <columns>IsNew__c</columns>
    <columns>FileName__c</columns>
    <columns>ImageUrl__c</columns>
    <columns>Image__c</columns>
    <columns>Website_Views__c</columns>
    <columns>PDF_Views__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Make It Yours view</label>
</ListView>